# YOLO-HailoRT-ROS1

./: .gitignore  README.md
docker_builder_robofly/: common_vars.sh
hailort_yolo_common/: CMakeLists.txt  package.xml
hailort_yolo_common/example/: yolox_tiny.cpp
hailort_yolo_common/src/: detection_inference.cpp_bup
mrs_yolo_detector/: CMakeLists.txt  nodelets.xml  package.xml
mrs_yolo_detector/config/: params.yaml
mrs_yolo_detector/launch/: detector.launch
mrs_yolo_detector/src/: mrs_yolo_detector.cpp
