<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hailort_yolo_common</name>
  <version>0.0.0</version>
  <description>The hailort_yolo_common package for mrs_yolo_detector.</description>
  <maintainer email="nekovfra@fel.cvut.cz">Frantisek Nekovar</maintainer>
  <license>LGPL v2.1 License</license>
  <author email="nekovfra@fel.cvut.cz">Frantisek Nekovar</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>hailort</depend>
  <depend>libopencv-dev</depend>

</package>
